<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">EventTracker</string>
	<string name="eventName">Activity Name</string>
	<string name="confirm">Confirm</string>
	<string name="Notes">Notes</string>
	<string name="startTime">Start Time:</string>
	<string name="endTime">End Time:</string>
	<string name="timeText">Time:</string>
	<string name="dateText">Date:</string>
	<string name="Set">Set</string>
	<string name="nextActivity">Next Activity</string>
	<string name="stopTracking">Stop Tracking</string>
	<string name="defaultStartTime">&lt; N/A &gt;</string>
	<string name="previousActivityText">Previous Activity: </string>
	<string name="currentActivityText">Activity in Progress: </string>
	<string name="toolbarNotTracking">Not Currently Tracking</string>
	<string name="toolbarTracking">Started Tracking</string>
	<string name="previousActivityDefault">None</string>
	<string name="isTracking">isTracking</string>
	<string name="activityListHeader">All Activities</string>
	<string name="settingsDefaultText">No settings yet. Come back soon!</string>
	<string name="deleteButtonHeader">Del</string>
	<string name="Event">Name of Activity:</string>
	<string name="eventNotesHint">Additional notes...</string>
	<string name="eventNameHint">What are you doing now?&quot;</string>
	<string name="settingsMenuText">Settings</string>
	<string name="debugMenuText">Debugging</string>
	<string name="defaultDate">12/31/1970 12:00 AM</string>
	<string name="activityInProgressText">Activity in Progress:</string>
	<string name="confirmText">Confirm</string>
	<string name="cancelText">Cancel</string>
	<string name="editModeHeader">Editing...</string>
	<string name="webserverViewText">View your events online</string>
	<string name="webserverAddressIntro">You data is available at:</string>
	<string name="webserverAddress">http://eventtracker.dyndns-at-home.com:3000
	</string>
	<string name="startEventServer">Start Event Server</string>
	<string name="stopEventServer">Stop Event Server</string>
	<string name="localAddressIntro">The ip address of this device (for debugging):
	</string>
<string name="alert_dialog_cancel">Cancel</string>
<string name="alert_dialog_ok">OK</string>
<string name="alert_dialog_password">Password:</string>
<string name="alert_dialog_text_entry">Enter a password</string>
<string name="alert_dialog_password_description">This password will be used to access your event data online</string>
<string name="viewMap">View Map</string>
<string name="tagButton">New Tag</string>
<string name="alert_dialog_tag_entry">Create a new tag</string>
<string name="alert_dialog_tag_description">Create a new tag that can be used to categorize your events</string>
<string name="notesButton">Add Note</string>
<string name="alert_dialog_notes_title">Enter a note:</string>
<string name="delete_dialog_title">Confirmation</string>
<string name="delete_dialog_yes">Yes</string>
<string name="rowIDContainer">rowIDContainer</string>
<string name="isInProgressContainer">isInProgressContainer</string>
<string name="dialog_yes">Yes</string>
<string name="dialog_no">No</string>
<string name="dialog_enter_password_description">In order to link account, enter the same password as before.  </string>
<string name="enter_same_password">Enter Password</string>
<string name="generateDataText">Generate random events</string>

</resources>
