<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="fill_parent">
	<TextView android:layout_height="wrap_content" android:id="@+id/row_event_title"
		android:layout_gravity="center" android:layout_width="30dip" android:textSize="18sp" 
		android:text="@string/eventName" android:layout_weight="1.84"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/row_event_start_time"
		android:layout_gravity="center" android:gravity="center" android:textSize="18sp"
		android:layout_width="35dip" android:text="@string/startTime" 
		android:layout_weight="1"></TextView>
	<TextView android:layout_gravity="center" android:textSize="18sp" 
		android:layout_height="wrap_content" android:layout_width="35dip"
		android:gravity="center" android:id="@+id/row_event_end_time"
		android:text="@string/endTime" android:layout_weight="1"></TextView>
	
</LinearLayout>
