<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_alignParentTop="true"
		android:orientation="vertical" android:id="@+id/edit_event_contents"
		android:layout_above="@+id/previous_activity_bar">
		<TextView android:id="@+id/EventText" android:textStyle="bold"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/Event"
			android:textSize="18sp" />
		<LinearLayout android:id="@+id/eventVoiceContainer"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<AutoCompleteTextView android:layout_below="@+id/EventText"
				android:id="@+id/editEventName" 
				android:layout_width="wrap_content" android:layout_weight="8"
				android:imeOptions="actionDone"
				android:layout_height="55dip"/>
			<ImageButton android:id="@+id/eventVoiceButton"
				android:layout_weight="1" android:layout_gravity="center"
				android:layout_width="55dip" android:layout_height="55dip"
				android:src="@drawable/ic_btn_speak_now" />
		</LinearLayout>
		<LinearLayout android:layout_margin="10dip"
			android:gravity="center" android:layout_width="fill_parent"
			android:layout_gravity="center" android:id="@+id/ActivityButtons"
			android:layout_height="wrap_content">
			<Button android:layout_height="100dip" android:layout_weight="4"
				android:id="@+id/NextActivityButton" android:text="@string/nextActivity"
				android:textSize="8pt" android:focusable="true"
				android:layout_width="70dip"></Button>
			<Button android:layout_height="100dip" android:layout_weight="3"
				android:id="@+id/StopTrackingButton" android:text="@string/stopTracking"
				android:textSize="8pt" android:layout_width="50dip"></Button>
		</LinearLayout>
		<View android:id="@+id/firstDivider" android:layout_height="2dp"
			android:layout_width="fill_parent" android:background="#888"
			android:layout_marginTop="10dip" android:layout_marginBottom="10dip" />
		<LinearLayout android:id="@+id/eventTagsContainer"
			android:orientation="horizontal" android:layout_height="wrap_content"
			android:layout_gravity="center_vertical" android:layout_width="match_parent"
			android:layout_margin="10dip">
			
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_weight="1"
				android:id="@+id/tag_button" android:text="@string/tagButton"
				android:focusable="true" android:layout_centerVertical="true"
				android:layout_gravity="center_vertical" />
			<Spinner android:id="@+id/tagSpinner" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:layout_weight="3" android:layout_gravity="center_vertical" />
		</LinearLayout>
				
		<LinearLayout android:layout_height="wrap_content"
			android:id="@+id/LinearLayout01" android:layout_width="fill_parent">
			<LinearLayout android:id="@+id/startTimeContainer"
				android:layout_width="wrap_content" android:orientation="vertical"
				android:layout_height="wrap_content" android:layout_weight="1" android:layout_gravity="center_vertical">
				<TextView android:id="@+id/startTimeLabel"
					android:focusable="true" android:textStyle="bold"
					android:layout_height="wrap_content" android:text="@string/startTime"
					android:layout_width="wrap_content"></TextView>
				<TextView android:id="@+id/startTime"
					android:layout_height="fill_parent" android:text="@string/defaultStartTime"
					android:layout_gravity="bottom" android:layout_width="wrap_content"></TextView>
			</LinearLayout>
			<Button android:layout_width="wrap_content" android:id="@+id/notes_button"
				android:text="@string/notesButton" android:focusable="true"
				android:layout_centerVertical="true" android:layout_gravity="center_vertical"
				android:layout_height="wrap_content" />
			<ImageView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:layout_gravity="center_vertical"
				android:layout_weight="1" android:scaleType="center"
				android:padding="2dip" android:id="@+id/viewMapButton" android:src="@drawable/maps_on"></ImageView>
			
				
		
</LinearLayout>
	</LinearLayout>

	<Button android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" android:layout_width="fill_parent"
		android:clickable="false" android:gravity="left|center_vertical"
		android:id="@+id/previous_activity_bar" android:text="@string/previousActivityText"
		android:focusable="true" />
	<LinearLayout android:id="@+id/dummyLayout"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:focusable="true" android:focusableInTouchMode="true">
	</LinearLayout>
</RelativeLayout>