<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	
		<TextView 
			android:id="@+id/EventText"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/Event" />
			
		<AutoCompleteTextView 
			android:layout_below="@+id/EventText"
			android:id="@+id/editEvent"
       		android:layout_width="fill_parent"
        	android:layout_height="wrap_content"/>
       
		<TextView 
		android:layout_below="@id/editEvent"
		android:id="@+id/locationText"
		android:textStyle="bold"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/Location" />
		
		
		<AutoCompleteTextView 
		android:layout_below="@id/locationText"
		android:id="@+id/editLocation" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" />
       
   
       <TextView 
        android:textStyle="bold"
		android:layout_below="@id/editLocation"
		android:id="@+id/startTime"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/startTime" />
		
	
	<Button 

	android:layout_below="@id/startTime"
	android:id="@+id/startTimeButton" 
	android:layout_height="40px" 
	android:layout_width="200px" 
	android:layout_gravity="center" 
	
	/>
	
	
	
	
     <TextView 
		android:layout_below="@id/startTimeButton"
		android:id="@+id/endTime"
		android:textStyle="bold"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/endTime" />
		
	<Button 
	android:layout_below="@id/endTime"
	android:id="@+id/endTimeButton" 
	android:layout_height="40px"
	android:layout_width="200px" 
	android:layout_gravity="center" />	

	<Button 
	
	android:id="@+id/confirm" 
	android:text="@string/confirm" 
	android:layout_height="wrap_content" 
	android:layout_alignParentBottom ="true" 
	android:layout_gravity="center" android:layout_width="fill_parent"/>

</RelativeLayout>